5.0.3 -> 5.0.4:
    - glen: markLinkedFailed if rpm file reopen failed during transaction to avoid losing old pkg info from db
    - at: fix: initialize msbits of erased package keys to zeroes on 64b hosts.
    - jbj: fix: python ts.hdrFromFdno(fdno) segfault.
    - jbj: use Realpath(3) so that RPMTAG_PACKAGEORIGIN has absolute path.
    - jbj: rpmio: add Realpath(3).
    - jbj: fix: "%description -n foo-bar" needs an additional comparison.
    - jbj: fix: allocate Icon: buffer after iconsize is initialized.
    - jbj: permit configurable POSIX behavior for parameterized macros
	(Marcin Kowalczyk<qrczak@knm.org.pl>).
    - jbj: fix: skip %exclude/%ghost files to get more accurate RPMTAG_SIZE.
    - jbj: fix: RPMTAG_SIZE is incorrect with %exclude and %ghost directives
        (Alexey Tourbin<at@altlinux.ru>).
    - rse: fix portability by providing own RPM_LIST_XXX macros in rpmmtree.c
    - jbj: fix: reattach RPMMIRE_DEFAULT as posix regex, not strcmp, pattern.
    - jbj: tests: add coverage for %pretrans et al scriptlets.
    - jbj: tests: verify upgrades using the edos-test packages.
    - jbj: merge "explicit-source-fetch-cli-option" patch from OpenPKG.
    - jbj: merge "download-source-files-from-original-location" patch from OpenPKG.
    - jbj: merge "support-external-download-command" patch from OpenPKG.
    - jbj: merge "support-srcdefattr" patch from OpenPKG.
    - jbj: permit noarch sub-packages. Pattern match guaranteee next ...
    - jbj: parser: inherit group/summary/description if not specified in subpkg.
    - jbj: parser: permit identically named sub-pkgs with different versions.
    - jbj: parser: trim comments where it makes sense to do so.
    - jbj: tests: add check-install target to attempt --relocate install.
    - jbj: tests: enhance the devtool-sanity package with scripts and a file.
    - jbj: tests: verify -Kv output using popt.
    - jbj: tests: verify setup using --version/--querytags/--showrc.