@@ -1,4 +1,6 @@
 5.0.3 -> 5.0.4:
+    - jbj: reserve ~1K in  RPMSIGTAG_PADDING for now.
+    - jbj: add RPMSIGTAG_PADDING to force metadata header alignment in file.
     - glen: markLinkedFailed if rpm file reopen failed during transaction to avoid losing old pkg info from db
     - at: fix: initialize msbits of erased package keys to zeroes on 64b hosts.
     - jbj: fix: python ts.hdrFromFdno(fdno) segfault.
